# cpanel-reseller-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: ci-cd.yml
data/: live_operations.json
deploy/: nginx.conf.example  publish_endpoint.sh  remote_deploy.sh
docs/: api-contracts.md  ci-cd.md  client-configuration.md
docs/architecture/: adr-001-modular-harness-and-memory.md  incremental-harness-evolution-guide.md
docs/superpowers/plans/: 2026-07-22-database-access-implementation.md
docs/superpowers/specs/: 2026-07-22-database-access-design.md
scripts/: bootstrap_upstream_tokens.py  capture_live_catalog.py  smoke_stdio.py  spike_mysql_connectivity.py
src/reseller_mcp/: __init__.py  account_workflows.py  admin_cli.py  audit.py  auth.py  bridge.py  catalog.py  config.py  cpanel.py  database_workflows.py  db.py  harness.py  models.py  mysql_client.py  normalizer.py  observability.py  policy.py  runtime.py  server.py  sql_guardrails.py
tests/: conftest.py  test_account_workflows.py  test_auth.py  test_catalog.py  test_config.py  test_database_workflows.py  test_db.py  test_harness.py  test_mysql_client.py  test_normalizer.py  test_policy.py  test_server.py  test_sql_guardrails.py
