[project]
name = "cpanel-reseller-mcp"
version = "0.1.0"
description = "Multi-user MCP control plane for a cPanel/WHM reseller"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28,<1",
  "jsonschema>=4.23,<5",
  "mcp[cli]==1.28.1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "typer>=0.15,<1",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=2.3.0,<3",
  "pip-audit==2.10.1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=1.4.0,<2",
  "respx>=0.22,<1",
  "ruff>=0.9,<1",
  "types-jsonschema>=4.23,<5",
]

[project.scripts]
reseller-mcp = "reseller_mcp.server:main"
reseller-mcp-admin = "reseller_mcp.admin_cli:app"
reseller-mcp-bridge = "reseller_mcp.bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reseller_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["reseller_mcp"]
